--- a/Chinook/Chinook.csproj
+++ b/Chinook/Chinook.csproj
@@ -21,6 +21,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.9" />
+    <PackageReference Include="MudBlazor" Version="6.9.0" />
     <PackageReference Include="System.Reactive.Core" Version="6.0.0" />
     <PackageReference Include="System.Reactive.Interfaces" Version="6.0.0" />
     <PackageReference Include="System.Reactive.Linq" Version="6.0.0" />
