--- a/Chinook/Chinook.csproj
+++ b/Chinook/Chinook.csproj
@@ -28,7 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Services\" />
+    <Folder Include="Services\Interfaces\" />
   </ItemGroup>
 
 </Project>
